--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     align-items: center;
     color: #F9FAF8;
     font-size: 24px;
-    padding-bottom: 48px;
+    
  }
 
  nav a {
@@ -33,19 +33,43 @@ body {
  #title-hero {
     display: flex;
     justify-content: center;
-    gap: 40px;
+    padding: 100px;
+    flex-wrap: nowrap;
+    gap: 30px;
  }
 
  #title-hero h2 {
     font-size: 48px;
     font-weight: bolder;
+    padding: 0;
+    margin: 0;
+    color: #F9FAF8;
  }
 
- .image {
-    padding: 50px 100px;
-    background-color: gray;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+
+ #title {
+   display: flex;
+   flex-direction: column;
+   flex-wrap: wrap;
+   width: 450px;
+   align-items: flex-start;
+ }
+
+ #title button {
+   width: 130px;
+   height: 35px;
+   background-color: #3882F6;
+   color: #F9FAF8;
+   border-radius: 8px;
+   border: none;
+   font-size: 18px;
+ }
+
+ #title p {
+   color: #E5E7EB;
+   font-size: 18px;
+   margin: 0;
+   padding: 10px 0;
  }
 
