--- a/style.css
+++ b/style.css
@@ -73,3 +73,34 @@ body {
    padding: 10px 0;
  }
 
+ #section-two {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+ }
+
+ #section-two img {
+   width: 170px;
+   height: 170px;
+   border-radius: 8px;
+   border: 2px solid #3882F6;
+ }
+
+ #section-two div {
+   display: flex;
+   justify-content: center;
+   padding-bottom: 50px;
+   
+ }
+ figcaption {
+   width: 170px;
+   text-align: center;
+   color: #828282;
+ }
+
+ #section-two h3 {
+   font-size: 36px;
+   color: #1F2937;
+   font-weight: bolder;
+ }
