--- a/style.css
+++ b/style.css
@@ -129,11 +129,46 @@ body {
  
  #last-section {
    background-color: #3882F6;
-   margin: 100px;
+   margin: 100px 200px;
    border-radius: 8px;
+   display: flex;
+   color: #F9FAF8;
+   justify-content: space-evenly;
+   padding: 50px;
+   align-items: center;
+}
+
+ #last-section button{
+  width: 130px;
+  height: 35px;
+  border-radius: 8px;
+  background-color: transparent;
+  border: 2px solid #F9FAF8;
+  font-size: 18px;
+  color: #F9FAF8;
+ }
+
+
+ #action h3 {
+  font-size: 24px;
+  padding: 0;
+  margin: 0;
+ }
+
+ #action p {
+  padding: 0;
+  margin: 0;
+  opacity: .7;;
  }
 
  footer {
    background-color: #1F2937;
-   
+   color: #F9FAF8;
+   text-align: center;
+   padding: 30px 0;
+ }
+
+ footer  p {
+  opacity: .7;
+
  }
